changes to navbar & fix overflow

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -2,6 +2,8 @@ html {
   height: 100vh;
   margin: 0;
   padding: 0;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 body {
